[package]
name = "csf-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Canonical protocol definitions for ARES ChronoFabric System"

[dependencies]
# Shared types for compatibility
csf-shared-types = { path = "../csf-shared-types" }

# Serialization and encoding
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }

# Bitflags for packet flags
bitflags = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Crypto for packet validation
sha2 = { workspace = true }

# Collections
indexmap = { workspace = true }

# Compression for packet optimization
lz4 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[features]
default = ["std", "serde_support"]
std = []
serde_support = []