[package]
name = "csf-quantum"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Enterprise-grade quantum algorithm implementations for ARES ChronoFabric"

[dependencies]
# Foundation crates
csf-core = { path = "../csf-core", features = ["net"] }
csf-time = { path = "../csf-time" }
csf-shared-types = { path = "../csf-shared-types" }

# Quantum computing essentials
nalgebra = { version = "0.33", features = ["serde-serialize", "rand"] }
num-complex = "0.4"
ndarray = { version = "0.16", features = ["serde"] }
# Mathematical optimization (simplified)
libm = "0.2"

# Performance optimization
rayon = "1.8"
crossbeam = "0.8"

# Random number generation for quantum simulation
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"

# Concurrency and async
tokio = { workspace = true, features = ["full"] }
async-trait.workspace = true
futures.workspace = true
parking_lot.workspace = true

# Error handling and diagnostics
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
bincode.workspace = true

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.3"
criterion = { workspace = true, features = ["html_reports"] }
approx = "0.5"

[features]
default = ["enterprise", "optimization"]
enterprise = []
optimization = ["intel-mkl"]
gpu-acceleration = []
intel-mkl = []
cuda = []
opencl = []
testing = []

[lib]
name = "csf_quantum"
path = "src/lib.rs"

