[package]
name = "csf-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "NovaCore ChronoSynclastic Fabric Runtime Orchestrator - Hexagonal Architecture Coordinator"

[dependencies]
# Core CSF Components
csf-core = { path = "../csf-core" }
csf-time = { path = "../csf-time" }
csf-bus = { path = "../csf-bus" }
csf-kernel = { path = "../csf-kernel" }
csf-sil = { path = "../csf-sil" }
csf-network = { path = "../csf-network" }
csf-telemetry = { path = "../csf-telemetry" }
csf-hardware = { path = "../csf-hardware" }

# Async Runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1.77"

# Error Handling
anyhow = "1.0.79"
thiserror = "1.0.56"

# Serialization
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
toml = "0.8.8"

# Collections and Data Structures
dashmap = "5.5.3"
indexmap = "2.1.0"
petgraph = "0.6.4"
uuid = { version = "1.6.1", features = ["v4", "serde"] }

# Concurrency
parking_lot = "0.12"
crossbeam = "0.8.4"
rayon = "1.8.0"

# Metrics and Observability
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
metrics = "0.22.0"

# Configuration
config = "0.14.0"
once_cell = "1.19.0"

# Utilities
bytes = "1.5.0"
pin-project-lite = "0.2.13"

[dev-dependencies]
tokio-test = "0.4.3"
criterion = { version = "0.5.1", features = ["html_reports"] }
proptest = "1.4.0"
tempfile = "3.8.1"

[features]
default = ["full"]
full = ["telemetry", "metrics", "tracing"]
telemetry = []
metrics = []
tracing = []

