[package]
name = "csf-time"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core dependencies
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
serde.workspace = true
tokio.workspace = true

# Time and synchronization
chrono.workspace = true
parking_lot.workspace = true

# Local crates  
csf-shared-types = { path = "../csf-shared-types" }

# Numerical computing for quantum-inspired algorithms
rand = "0.8"
rand_xoshiro = "0.6"

# Optional dependencies for testing
loom = { version = "0.7", optional = true }

[dev-dependencies]
proptest.workspace = true
tokio-test = "0.4"
criterion.workspace = true
tracing-test = "0.2"
serde_json = "1.0"
bincode = "1.3.3"

[features]
default = ["net"]
net = []
testing = []
loom_tests = ["dep:loom"]