[package]
name = "hephaestus-forge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
# Core dependencies from workspace
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }

# Additional dependencies
bincode = "1.3.3"
crossbeam-channel = "0.5"
dashmap = "5.5"
parking_lot = "0.12"
anyhow = { workspace = true }
ring = "0.17"
nalgebra = { version = "0.33", features = ["serde-serialize"] }
ndarray = { version = "0.16", features = ["serde"] }
num-traits = "0.2"
num-complex = "0.4"
metrics = "0.21"
tokio-stream = "0.1"
glob = "0.3"

# High-performance persistent storage
rocksdb = { version = "0.21", features = ["snappy"] }
lz4 = "1.24"

# Optional dependencies for advanced features
z3 = { version = "0.12", optional = true }
nix = { version = "0.28", optional = true }
libc = { version = "0.2", optional = true }
llvm-sys = { version = "180", optional = true }
candle-core = { version = "0.4", optional = true }
candle-nn = { version = "0.4", optional = true }
prometheus = { version = "0.13", optional = true }
warp = { version = "0.3", optional = true }
num_cpus = "1.16"
cudarc = { version = "0.10", optional = true }
metal = { version = "0.27", optional = true }

# Firecracker VM dependencies
hyper = { version = "1.0", features = ["client", "http1"], optional = true }
hyper-util = { version = "0.1", optional = true }
http = { version = "1.0", optional = true }
tempfile = { version = "3.8", optional = true }
flate2 = { version = "1.0", optional = true }
seccomp = { version = "0.1", optional = true }
caps = { version = "0.5", optional = true }

# eBPF security filtering dependencies
libbpf-rs = { version = "0.23", optional = true }
libbpf-sys = { version = "1.4", optional = true }
aya = { version = "0.12", optional = true }
aya-log = { version = "0.2", optional = true }
plain = { version = "0.2", optional = true }
memmap2 = { version = "0.9", optional = true }

# High-performance code generation dependencies
rayon = "1.8"
smallvec = { version = "1.11", features = ["serde"] }
ahash = "0.8"
bumpalo = "3.14"

# ABI verification dependencies
gimli = { version = "0.28", optional = true }
object = { version = "0.32", features = ["read", "std"], optional = true }
addr2line = { version = "0.21", optional = true }

# Risk assessment engine dependencies
regex = "1.10"
reqwest = { version = "0.11", features = ["json"] }
hmac = "0.12"

# Internal ARES dependencies
csf-core = { path = "../csf-core" }
csf-time = { path = "../csf-time" }
csf-sil = { path = "../csf-sil" }
csf-bus = { path = "../csf-bus" }
csf-mlir = { path = "../csf-mlir" }
csf-clogic = { path = "../csf-clogic" }
csf-runtime = { path = "../csf-runtime" }
csf-quantum = { path = "../csf-quantum" }
csf-shared-types = { path = "../csf-shared-types" }

[features]
default = ["basic-verification"]
basic-verification = []
formal-verification = ["dep:z3"]
abi-verification = ["dep:gimli", "dep:object", "dep:addr2line"]
sandboxing = ["dep:nix", "dep:libc", "dep:hyper", "dep:hyper-util", "dep:http", "dep:tempfile", "dep:flate2", "dep:seccomp", "dep:caps"]
ebpf-security = ["dep:libbpf-rs", "dep:libbpf-sys", "dep:aya", "dep:aya-log", "dep:plain", "dep:memmap2"]
mlir-integration = ["dep:llvm-sys"]
adversarial-testing = ["dep:candle-core", "dep:candle-nn"]
monitoring = ["dep:prometheus", "dep:warp"]
cuda = ["dep:cudarc"]
metal = ["dep:metal"]
full = ["formal-verification", "abi-verification", "sandboxing", "ebpf-security", "mlir-integration", "adversarial-testing", "monitoring"]

[dev-dependencies]
proptest = "1.4.0"
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
tokio = { version = "1.40", features = ["full", "test-util"] }
rand = "0.8"

[[bench]]
name = "resonance_vs_traditional"
harness = false

[[bench]]
name = "smt_performance"
harness = false
required-features = ["formal-verification"]

[[bench]]
name = "synthesis_performance"
harness = false

[[bench]]
name = "intent_storage_performance"
harness = false

[[bench]]
name = "firecracker_performance"
harness = false
required-features = ["sandboxing"]

[[bench]]
name = "validation_performance"
harness = false

[[example]]
name = "historical_workload_analysis"
required-features = ["disabled"]